fixed category buttons for mobile, tablet, and desktop. logo header on mobile now links to home page, fixed the about page image bg, added tmdb logo, changed svg for mobile nav for consistent size, removed semicolon again for favourites page

--- a/movie-app/src/styles/About.css
+++ b/movie-app/src/styles/About.css
@@ -26,6 +26,11 @@ p {
     text-align: left;
 }
 
+.tmdb-logo {
+    width: 5rem;
+    margin: 1rem;
+}
+
 .img-bg {
     opacity: 0.20;
     z-index: 40;
@@ -34,7 +39,7 @@ p {
 .bg-1 {
     transform: rotate(-20deg);
     position: absolute;
-    bottom: 5rem;
+    bottom: 1rem;
 }
 
 .bg-2 {
@@ -48,6 +53,22 @@ p {
     .about-us {
         margin-top: 10rem;
     }
+
+    .tmdb-logo {
+        width: 6rem;
+    }
+
+    .bg-1 {
+        bottom: 1rem;
+        right: -3rem;
+    }
+
+    .bg-2 {
+        top: 10px;
+        left: -4rem;
+
+    }
+
 }
 
 @media (min-width: 50em) {
@@ -56,12 +77,40 @@ p {
         margin-right: 5rem;
         padding: 3.5rem;
     }
+
+    .tmdb-logo {
+        width: 8rem;
+    }
+
+    .bg-1 {
+        bottom: -7rem;
+        right: -8rem;
+        width: 23rem;
+    }
+
+    .bg-2 {
+        left: -8rem;
+        width: 23rem;
+
+    }
 }
 
 @media (min-width: 64em) {
     .about-us {
         margin-left: 16rem;
         margin-right: 16rem;
+    }
+
+    .bg-1 {
+        bottom: -7rem;
+        right: -19rem;
+    }
+
+    .bg-2 {
+        left: -19rem;
+        top: 4rem;
+
+
     }
 }
 
@@ -70,4 +119,17 @@ p {
         margin-left: 24rem;
         margin-right: 24rem;
     }
-  }
+
+    .bg-1 {
+        right: -27rem;
+        width: 25rem;
+    }
+
+    .bg-2 {
+        left: -27rem;
+        top: 7rem;
+        width: 25rem;
+
+
+    }
+}
